--- a/page/home/index.wxml
+++ b/page/home/index.wxml
@@ -15,7 +15,7 @@
         <view class="page-body-line"></view>
 
         <view class="m-menu">
-          <navigator class="item" url="{{item.url}}" wx:for="{{repair}}" wx:key="{{item.id}}">
+          <navigator class="item" url="{{item.url}}" wx:for="{{repair}}" wx:key="{{item.id}}" bindtap="clickRepair" data-url="{{item.url}}">
             <image wx:if="{{item.icon_url}}" src="{{item.icon_url}}"></image>
             <text>{{item.name}}</text>
           </navigator>
