--- a/app.wxss
+++ b/app.wxss
@@ -340,7 +340,7 @@ input {
 }
 .container{
   padding: 0;
-  font-size: 14rpx;
+  /* font-size: 14rpx; */
   color: #000;
 }
 .container .feed-item{
