--- a/page/home/pages/all-work-orders/all-work-orders.wxml
+++ b/page/home/pages/all-work-orders/all-work-orders.wxml
@@ -1,5 +1,18 @@
 <view class="page">
   <view class="page__bd">
     <mp-searchbar bindselectresult="selectResult" search="{{search}}"></mp-searchbar>
+          <scroll-view scroll-y="true" class="container discovery" bindscrolltolower="lower"  scroll-into-view="{{toView}}" scroll-top="{{scrollTop}}">
+        <mp-cells>
+            <mp-cell wx:for="{{orderList}}" wx:for-item="order" wx:key="{{order.id}}" data-id="{{order.id}}" bindtap="clickOrder">
+                <view slot="title" style="position: relative;margin-right: 10px;">
+                  <image src="/imgs/icon/to_be_confirmed.png" style="width: 50px; height: 50px; display: block"/>
+                </view>
+                <view>{{order.programName}}</view>
+                <view>{{order.deviceName}}</view>
+                <view style="font-size: 13px;color: #888888;">设备位置:{{order.malfunctionLoc}}</view>
+                <view style="font-size: 13px;color: #888888;">报修时间:{{order.malfunctionDate}}</view>
+            </mp-cell>
+        </mp-cells>
+      </scroll-view>
   </view>
 </view>
