--- a/page/home/pages/repair/repair.wxss
+++ b/page/home/pages/repair/repair.wxss
@@ -1,5 +1,5 @@
 /* page/repair/repair.wxss */
-@import "../common/lib/weui.wxss";
+@import "../../../common/lib/weui.wxss";
 /* 日期选择器 */
 .picker{
   padding: 19rpx 26rpx;
