--- a/page/home/pages/toBeConfirm/toBeConfirm.wxml
+++ b/page/home/pages/toBeConfirm/toBeConfirm.wxml
@@ -4,7 +4,7 @@
         <mp-cells>
             <mp-cell wx:for="{{orderList}}" wx:for-item="order" wx:key="{{order.id}}" data-id="{{order.id}}" bindtap="clickOrder">
                 <view slot="title" style="position: relative;margin-right: 10px;">
-                  <image src="../../imgs/icon/to_be_confirmed.png" style="width: 50px; height: 50px; display: block"/>
+                  <image src="../../../../imgs/icon/to_be_confirmed.png" style="width: 50px; height: 50px; display: block"/>
                 </view>
                 <view>{{order.programName}}</view>
                 <view>{{order.deviceName}}</view>
