--- a/app.wxss
+++ b/app.wxss
@@ -276,12 +276,13 @@ input {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin: 13rpx 13rpx;
 }
 
 .userinfo-avatar {
   overflow: hidden;
-  width: 200rpx;
-  height: 200rpx;
+  width: 210rpx;
+  height: 210rpx;
   margin: 15rpx;
   border-radius: 50%;
   border: 2px solid #fff;
@@ -321,14 +322,14 @@ input {
 }
 
 .flex-item {
-  flex-grow: 1;
+  flex-grow: 0.8;
   text-align: center;
 }
 
 .top-tab {
   width: 750rpx;
   height: 100rpx;
-  background: #298de5;
+  background: rgb(68, 97, 158); 
   color: #8ccefd;
   font-size: 28rpx;
   line-height: 100rpx;
