--- a/page/home/pages/all-work-orders/all-work-orders.wxss
+++ b/page/home/pages/all-work-orders/all-work-orders.wxss
@@ -1,48 +1,8 @@
 @import '../../../common/lib/common.wxss';
-page{
-    background-color: #F8F8F8;
-    font-size: 16px;
-    font-family: -apple-system-font,Helvetica Neue,Helvetica,sans-serif;
+.container{
+  height: 1500rpx;
+  
 }
-.page__hd {
-    padding: 40px;
-}
-.page__bd {
-    padding-bottom: 40px;
-}
-.page__bd_spacing {
-    padding-left: 15px;
-    padding-right: 15px;
-}
-
-.page__ft{
-    padding-bottom: 10px;
-    text-align: center;
-}
-
-.page__title {
-    text-align: left;
-    font-size: 20px;
-    font-weight: 400;
-}
-
-.page__desc {
-    margin-top: 5px;
-    color: #888888;
-    text-align: left;
-    font-size: 14px;
-}
-.weui-cell_example:before{
-    left:52px;
-}
-.searchbar-result{
-    margin-top: 0;
-    font-size: 14px;
-}
-.searchbar-result .weui-cell__bd{
-  padding: 2px 0 2px 20px;
-  color: #666;
-}
-.searchbar-result:before{
-    display: none;
+.blue {
+  background: blue;
 }
