--- a/page/my/index.wxml
+++ b/page/my/index.wxml
@@ -37,5 +37,11 @@
       </view>
     </view>
 
+    <view wx:if="{{userRole != '请登录'}}" class="my-item flex-wrp exit" bindtap="exit">
+      <view class="myitem-name flex-item" style="text-align: center">
+        <text>退出登录</text>
+      </view>
+    </view>
+
   </view>
 </view>
