--- a/page/my/pages/login/login.wxml
+++ b/page/my/pages/login/login.wxml
@@ -1,24 +1,32 @@
 <!--page/my/pages/login/login.wxml-->
 <!--login.wxml-->
-<!-- <view class="container">
+<view class="container">
   <block>
     <view class="content">
       <view class="hd">
         <image class="logo" src="/imgs/icon/ananops.png"></image>
-        <image class="logo" src="{{imageCode}}"></image>
       </view>
       <view class="bd">
         <form class="login-form">
           <view class="input-group {{userid_focus ? 'active' : ''}}">
             <text class="input-label">帐号</text>
-            <input type="number" cursor-spacing="30" id="userid" maxlength="7" placeholder="请输入账号" bindinput="getUserId" bindfocus="inputFocus" bindblur="inputBlur" />
+            <input type="text" cursor-spacing="30" id="userid" maxlength="7" placeholder="请输入账号" bindinput="getUserId" bindfocus="inputFocus" bindblur="inputBlur" />
           </view>
           <view class="input-group {{passwd_focus ? 'active' : ''}}">
             <text class="input-label">密码</text>
             <input password="true" cursor-spacing="30" id="passwd" placeholder="请输入密码" bindinput="getPassword" bindfocus="inputFocus" bindblur="inputBlur" />
           </view>
 
-          <view  bindtap="getImageCode">123</view>
+          <view class="input-group {{imagecode_focus ? 'active' : ''}}">
+            <text class="input-label">验证码</text>
+            <input type="number" password="true" cursor-spacing="30" id=imagecode" placeholder="请输入验证码" bindinput="getImagecode" bindfocus="inputFocus" bindblur="inputBlur" />
+          </view>
+          
+          <view class="imagecode-view">
+          <image class="imageCode" src="{{imageCode}}"></image>
+          <view bindtap = "refreshImagecode">刷新</view>
+          </view>
+
           <view class="login-help" bindtap="showHelp">
             <text>帮助</text>
             <image class="login-help-img" src="/imgs/others/help.png"></image>
@@ -52,14 +60,4 @@
 
     </view>
   </block>
-</view> -->
-
- <image class="logo" src="{{imageCode}}"></image>
-
-<input bindinput="imageCode" type="text" name = "imagecode"></input>
-
-<view  bindtap="getImageCode">123</view>
-
-        <view class="confirm-btn" bindtap="login">
-          <text>登录</text>
-        </view>
+</view>
