--- a/page/my/pages/login/login.wxss
+++ b/page/my/pages/login/login.wxss
@@ -28,20 +28,6 @@
   50% {opacity: 1;}
   100% {opacity: 1;transform: translate3d(0,450rpx,0);}
 }
-.title{
-  position: absolute;
-  top: 30rpx;
-  left: 50%;
-  width: 600rpx;
-  height: 200rpx;
-  margin-left: -300rpx;
-  opacity: 0;
-  animation: show 2.5s cubic-bezier(0.19, 1, 0.22, 1) .5s forwards;
-}
-@keyframes show{
-  0% {opacity: 0;}
-  100% {opacity: .95;}
-}
 
 .hd {
   position: absolute;
@@ -62,37 +48,6 @@
   margin-left: -80rpx;
   border-radius: 160rpx;
   opacity: .95;
-}
-@keyframes sway{
-  0% {transform: translate3d(0,20rpx,0) rotate(-15deg); }
-  17% {transform: translate3d(0,0rpx,0) rotate(25deg); }
-  34% {transform: translate3d(0,-20rpx,0) rotate(-20deg); }
-  50% {transform: translate3d(0,-10rpx,0) rotate(15deg); }
-  67% {transform: translate3d(0,10rpx,0) rotate(-25deg); }
-  84% {transform: translate3d(0,15rpx,0) rotate(15deg); }
-  100% {transform: translate3d(0,20rpx,0) rotate(-15deg); }
-}
-.wave {
-  position: absolute;
-  z-index: 3;
-  right: 0;
-  bottom: 0;
-  opacity: 0.725;
-  height: 260rpx;
-  width: 2250rpx;
-  animation: wave 10s linear infinite;
-}
-.wave-bg {
-  z-index: 1;
-  animation: wave-bg 10.25s linear infinite;
-}
-@keyframes wave{
-  from {transform: translate3d(125rpx,0,0);}
-  to {transform: translate3d(1125rpx,0,0);}
-}
-@keyframes wave-bg{
-  from {transform: translate3d(375rpx,0,0);}
-  to {transform: translate3d(1375rpx,0,0);}
 }
 
 .bd {
@@ -251,4 +206,17 @@ form {
 }
 page .wx-video-bar{
   display: none;
+}
+
+.imagecode-view {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+}
+
+.imageCode {
+  width: 210rpx;
+  height: 100rpx;
+
 }
